WeatherDetailItem: update list item layout
* Single card layout with animation
* Use detail cards instead of text

--- a/SimpleWeather.Windows/Controls/DetailItem.xaml
+++ b/SimpleWeather.Windows/Controls/DetailItem.xaml
@@ -30,6 +30,7 @@
 
     <Border
         x:Name="ItemBorder"
+        HorizontalAlignment="Stretch"
         Background="{ThemeResource ButtonBackground}"
         BorderBrush="{ThemeResource ButtonBorderBrush}"
         BorderThickness="{ThemeResource ButtonBorderThemeThickness}"
