--- a/SimpleWeather.Windows/Main/WeatherNow.xaml
+++ b/SimpleWeather.Windows/Main/WeatherNow.xaml
@@ -284,7 +284,7 @@
                             HorizontalAlignment="Center"
                             VerticalAlignment="Center"
                             BorderThickness="0"
-                            RelativePanel.Above="SummaryPanel"
+                            RelativePanel.Above="FeelsLikePanel"
                             RelativePanel.AlignLeftWithPanel="True">
                             <TextBlock
                                 Name="CurCondition"
@@ -294,6 +294,25 @@
                                 FontSize="24"
                                 Foreground="{ThemeResource ForegroundColor}"
                                 Text="{x:Bind WNowViewModel.Weather.CurCondition, Mode=OneWay}" />
+                        </Border>
+                        <Border
+                            x:Name="FeelsLikePanel"
+                            Margin="0,5"
+                            HorizontalAlignment="Center"
+                            VerticalAlignment="Center"
+                            RelativePanel.Above="SummaryPanel"
+                            RelativePanel.AlignLeftWithPanel="True"
+                            Visibility="{x:Bind WNowViewModel.Weather.FeelsLike, Converter={StaticResource stringVisibilityConverter}, Mode=OneWay}">
+                            <TextBlock
+                                x:Name="FeelsLikeText"
+                                Padding="5"
+                                d:Text="Feels like 75°"
+                                toolkit:Effects.Shadow="{StaticResource CommonShadow}"
+                                FontSize="14"
+                                FontWeight="Normal"
+                                Foreground="{ThemeResource ForegroundColor}"
+                                Text="{Binding Weather.FeelsLike, Mode=OneWay}"
+                                TextWrapping="Wrap" />
                         </Border>
                         <Border
                             x:Name="SummaryPanel"
