maui: fix build errors

--- a/Maui/SimpleWeather.Maui/Controls/Graphs/Views/ForecastRangeBarGraphPanel.xaml
+++ b/Maui/SimpleWeather.Maui/Controls/Graphs/Views/ForecastRangeBarGraphPanel.xaml
@@ -40,6 +40,6 @@
             <graphs:ForecastRangeBarGraphView.GestureRecognizers>
                 <TapGestureRecognizer Tapped="TapGestureRecognizer_Tapped" />
             </graphs:ForecastRangeBarGraphView.GestureRecognizers>
-        </graphs:RangeBarGraphView>
+        </graphs:ForecastRangeBarGraphView>
     </Grid>
 </ContentView>
